@startuml

title __FAME 2024 HIDE'n SEEK__\n

  namespace fame {
    class DynamicSprite {
        + DynamicSprite()
        + draw()
        ~ moveIfPossible()
    }
  }
  

  namespace fame {
    class Enemy {
        - catchTheHero : boolean
        - sees : boolean
        - startingX : double
        - startingY : double
        - timeStamp : long
        + Enemy()
        + draw()
        + hasCatchTheHero()
        + sees()
        + updateFSM()
        + updatePosition()
    }
  }
  

  namespace  fame {
    enum EnemyBehaviour {
      CHARGING
      IDLE
      SUSPISCIOUS
      i
    }
  }
  

  namespace fame {
    class GUI {
        - timerGameEngine : Timer
        + GUI()
        + keyPressed()
        + keyReleased()
        + keyTyped()
        {static} + main()
        + switchToGameOver()
        + switchToPlaying()
    }
  }
  

  namespace fame {
    class GameEngine {
        - spriteArrayList : ArrayList<Sprite>
        + GameEngine()
        + actionPerformed()
        + fsmEvolve()
        + getGameState()
    }
  }
  

  namespace fame {
    class GameOverScreen {
        ~ blinkPeriod : int
        ~ gameOver : Image
        + GameOverScreen()
        + paint()
    }
  }
  

  namespace fame {
    class GameRender {
        - listOfSprites : ArrayList<Sprite>
        + GameRender()
        + addOneSprite()
        + getListOfSprites()
        # paintComponent()
    }
  }
  

  namespace fame {
    enum GameState {
      GAME_OVER
      GAME_WIN
      PLAYING
      WELCOME
    }
  }
  

  namespace fame {
    class Hero {
        - height : int
        - keyPressed : int
        - lastMesuredTime : long
        - timeBeforeAsleep : int
        - timeBeforeSleeping : int
        - timeBetweenFramesInMs : int
        - width : int
        + Hero()
        + draw()
        + setHeroBehaviour()
        + setKeyPressed()
        + updateFSM()
        + updatePosition()
    }
  }
  

  namespace fame {
    enum HeroBehaviour {
      SLEEPING_EAST
      SLEEPING_NORTH
      SLEEPING_SOUTH
      SLEEPING_WEST
      SLEEPY_EAST
      SLEEPY_NORTH
      SLEEPY_SOUTH
      SLEEPY_WEST
      WALKING_EAST
      WALKING_NORTH
      WALKING_SOUTH
      WALKING_WEST
      attitude
      numberOfFrameInCurrentAttitude
    }
  }
  

  namespace fame {
    class Main {
        {static} + main()
    }
  }
  

  namespace fame {
    class SolidSprite {
        # hitBox : Rectangle
        + SolidSprite()
        + draw()
    }
  }
  

  namespace fame {
    class Sprite {
        # image : Image
        # x : double
        # y : double
        + Sprite()
        + draw()
    }
  }
  

  namespace fame {
    class WelcomeScreen {
        ~ blinkPeriod : int
        ~ welcome : Image
        + WelcomeScreen()
        + paint()
    }
  }
  

  fame.DynamicSprite -up-|> fame.SolidSprite
  fame.Enemy -up-|> fame.DynamicSprite
  fame.Enemy o-- fame.EnemyBehaviour : enemyBehaviour
  fame.GUI .up.|> java.awt.event.KeyListener
  fame.GUI -up-|> javax.swing.JFrame
  fame.GUI o-- fame.DynamicSprite : enemy
  fame.GUI o-- fame.GameEngine : gameEngine
  fame.GUI o-- fame.GameOverScreen : gameOverScreen
  fame.GUI o-- fame.GameRender : gameRender
  fame.GUI o-- fame.Hero : hero
  fame.GUI o-- fame.WelcomeScreen : welcomeScreen
  fame.GameEngine .up.|> java.awt.event.ActionListener
  fame.GameEngine o-- fame.GameState : gameState
  fame.GameEngine o-- fame.Hero : hero
  fame.GameEngine o-- fame.GUI : root
  fame.GameOverScreen -up-|> javax.swing.JPanel
  fame.GameRender -up-|> javax.swing.JPanel
  fame.Hero -up-|> fame.DynamicSprite
  fame.Hero o-- fame.GameRender : environment
  fame.Hero o-- fame.HeroBehaviour : heroBehaviour
  fame.SolidSprite -up-|> fame.Sprite
  fame.WelcomeScreen -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
